--- a/movpe_STO/movpe_sto.data.archive.yaml
+++ b/movpe_STO/movpe_sto.data.archive.yaml
@@ -23,8 +23,9 @@ data:
     - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#Deposition_control
       name: Deposition Control
       data_file: datafile.xlsx
-    - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#Measurement_hrxrd
+    - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#HRXRD_measurement
       name: HR XRD Characterization
       data_file: datafile.xlsx
-    - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#AFM_measurements
+    - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#AFM_measurement
       name: AFM Characterization
+      data_file: datafile.xlsx
