--- a/movpe_CNR/movpe_cnr.data.archive.yaml
+++ b/movpe_CNR/movpe_cnr.data.archive.yaml
@@ -14,10 +14,10 @@ data:
   - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#Growth_run
     name: Epitaxial Growth
     data_file: Parma_datafile_nomad.xlsx
-  - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#Measurement_hrxrd
+  - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#HRXRD_measurement
     name: HR XRD Characterization
     data_file: Parma_datafile_nomad.xlsx
-  - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#AFM_measurements
+  - m_def: ../upload/raw/movpe_cnr.schema.archive.yaml#AFM_measurement
     name: AFM Characterization
     data_file: Parma_datafile_nomad.xlsx
   inputs:
