--- a/movpe_STO/movpe_sto.data.archive.yaml
+++ b/movpe_STO/movpe_sto.data.archive.yaml
@@ -3,12 +3,13 @@ data:
   users:  #section name - not to be filled
     responsible_person: 
       - user_id: 5c87d4dd-5b6a-4759-9946-fff9bbd7cd44
+  instrument: 
+    - name: my_instrument_name
+      reference: ../upload/raw/Instrument.data.archive.yaml#data
   tasks: 
-    # - ../upload/raw/process.archive.yaml#data
-    # - ../upload/raw/HRXRD_measurement.archive.yaml#data
-    - m_def: ../upload/raw/base_classes.schema.archive.yaml#TaskReference 
-      name: "Epitaxial Growth Reference"
-      task: ../upload/raw/process.data.archive.yaml#data
+    # - m_def: ../upload/raw/base_classes.schema.archive.yaml#TaskReference 
+    #   name: "Epitaxial Growth Reference"
+    #   task: ../upload/raw/process.data.archive.yaml#data
     - m_def: ../upload/raw/movpe_sto.schema.archive.yaml#Process_movpesto
       name: Epitaxial Growth
       data_file: datafile.xlsx
