Updates transmission nexus schema

--- a/transmission/nexus_eln_example/transmission-nexus.scheme.archive.yml
+++ b/transmission/nexus_eln_example/transmission-nexus.scheme.archive.yml
@@ -3,7 +3,7 @@ definitions:
   sections:
     Transmission:
       base_sections:
-        - "nomad.datamodel.metainfo.eln.NexusParser"
+        - "nomad.datamodel.metainfo.eln.NexusDataConverter"
         - "nomad.datamodel.data.EntryData"
       m_annotations:
         template:
