Adds additional fields to transmission eln

--- a/transmission/nexus_eln_example/eln_data.yaml
+++ b/transmission/nexus_eln_example/eln_data.yaml
@@ -1,5 +1,11 @@
 Sample:
   name: KTF-9_1_A
+experiment_identifier: Test
+instrument:
+  common_beam_depolarizer: false
+  common_beam_mask:
+    y_gap: 100
+  polarizer: 0
 operator:
   address: Unter den Linden 6
   affiliation: HU Berlin
