--- a/melt_czochralski_Dadzis/DAQ-6510.archive.yaml
+++ b/melt_czochralski_Dadzis/DAQ-6510.archive.yaml
@@ -6,13 +6,12 @@ definitions:
       - nomad.parsing.tabular.TableData
       - nomad.datamodel.data.EntryData
       m_annotations:
-        lane_width: 400px
+        eln:
+          lane_width: 400px
       quantities:
         data_file:
           type: str
-          description: 'A reference to an uploaded .csv
-
-            '
+          description: 'A reference to an uploaded .csv'
           m_annotations:
             tabular_parser:
               sep: ','
@@ -21,53 +20,45 @@ definitions:
               adaptor: RawFileAdaptor
             eln:
               component: FileEditQuantity
-        value_timestamp_rel:
+        elapsed_time:
           type: np.float64
-          shape:
-          - '*'
+          shape: ['*']
           m_annotations:
             tabular:
               name: time_rel
           description: Relative time
-        value_timestamp_abs:
+        datetime:
           type: Datetime
-          shape:
-          - '*'
+          shape: ['*']
           m_annotations:
             tabular:
               name: time_abs
           description: 'Timestamp for when the values provided in the value field
             were registered.
-
             Individual readings can be stored with their timestamps under value_log.
-
             This is to timestamp the nominal setpoint or
-
-            average reading values listed above in the value field.
-
-            '
+            average reading values listed above in the value field.'
       sub_sections:
         TE_1_K_bottom_axis:
           section:
             m_annotations:
               plot:
               - label: value_log over time
-                x: value_timestamp_rel
+                x: elapsed_time
                 y: value_log
             quantities:
               value_log:
                 type: np.float64
-                shape:
-                - '*'
+                shape: ['*']
                 m_annotations:
                   tabular:
                     name: TE_1_K bottom axis
-                description: Time history of sensor readings. May differ from setpoint
-              value_timestamp_rel:
+                description: Time history of sensor readings. May differ from nominal setpoint
+              elapsed_time:
                 type:
                   type_kind: quantity_reference
                   type_data: '#/definitions/section_definitions/0/quantities/1'
-              value_timestamp_abs:
+              datetime:
                 type:
                   type_kind: quantity_reference
                   type_data: '#/definitions/section_definitions/0/quantities/2'
@@ -102,22 +93,21 @@ definitions:
             m_annotations:
               plot:
               - label: value_log over time
-                x: value_timestamp_rel
+                x: elapsed_time
                 y: value_log
             quantities:
               value_log:
                 type: np.float64
-                shape:
-                - '*'
+                shape: ['*']
                 m_annotations:
                   tabular:
                     name: rogowski_PEM_300A
-                description: Time history of sensor readings. May differ from setpoint
-              value_timestamp_rel:
+                description: Time history of sensor readings. May differ from nominal setpoint
+              elapsed_time:
                 type:
                   type_kind: quantity_reference
                   type_data: '#/definitions/section_definitions/0/quantities/1'
-              value_timestamp_abs:
+              datetime:
                 type:
                   type_kind: quantity_reference
                   type_data: '#/definitions/section_definitions/0/quantities/2'
@@ -151,8 +141,8 @@ data:
   m_def: Sensors_list
   data_file: DAQ-6510.csv
   TE_1_K_bottom_axis:
-    value_timestamp_rel: '#/data/value_timestamp_rel'
-    value_timestamp_abs: '#/data/value_timestamp_abs'
+    elapsed_time: '#/data/elapsed_time'
+    datetime: '#/data/datetime'
   rogowski_PEM_300A:
-    value_timestamp_rel: '#/data/value_timestamp_rel'
-    value_timestamp_abs: '#/data/value_timestamp_abs'
+    elapsed_time: '#/data/elapsed_time'
+    datetime: '#/data/datetime'
