updated inheritance of Entity and Substance

--- a/mbe_SiGe/Isopropanol.data.archive.yaml
+++ b/mbe_SiGe/Isopropanol.data.archive.yaml
@@ -1,9 +1,3 @@
 data:
-  m_def: ../upload/raw/base_classes.schema.archive.yaml#Substance
-  SampleID:
-    institute: IKZ
-    sample_owner: Maximilian
-    creation_datetime: 2022-09-26
-    sample_short_name: my_sample
-    #sample_id:
-  iupac_name: isopropyl alcohol
+  m_def: 'nomad.datamodel.metainfo.eln.Substance'
+  name: isopropyl alcohol
