--- a/oxide_powder_preparation/Sample.data.archive.yaml
+++ b/oxide_powder_preparation/Sample.data.archive.yaml
@@ -1,5 +1,5 @@
 data:
-  m_def: ../upload/raw/base_classes.schema.archive.yaml#Sample
+  m_def: ../upload/raw/base_classes.schema.archive.yaml#Ensemble
   SampleID:
     institute: IKZ
     sample_owner: Giorgio
