--- a/oxide_powder_preparation/Sample.data.archive.yaml
+++ b/oxide_powder_preparation/Sample.data.archive.yaml
@@ -5,11 +5,10 @@ data:
     sample_owner: Giorgio
     creation_datetime: 2022-09-26
     sample_short_name: my_sample
-    #sample_id:
-  geometry:
-    parallelepiped:
-      height: 54
-      width: 250
-      length: 250
-      surface_area: 12500
-      volume: 670000
+  components:
+    - name: component 1
+      system: ../uploads/raw/LiCO3.data.rchive.yaml#data
+      mass: 0.000043
+    - name: component 2
+      system: ../uploads/raw/Al2O3.data.rchive.yaml#data
+      mass: 0.000067
