--- a/example_for_workflow/test_workflow.data.archive.yaml
+++ b/example_for_workflow/test_workflow.data.archive.yaml
@@ -42,50 +42,51 @@ data:
         section: ../upload/raw/Sample.data.archive.yaml#data
   - m_def: ../upload/raw/test_workflow.schema.archive.yaml#Sample_cut
     name: Sample_cut
+    number_of_samples: 2
     inputs: 
       - name: my sample 
         section: ../upload/raw/Sample.data.archive.yaml#data
-    outputs: 
-      - name: my cut sample 1
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 2
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 3
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 4
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 5
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 6
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 7
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 8
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 9
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 10
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 11
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 12
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 13
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 14
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 15
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 16
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 17
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 18
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 19
-        section: ../upload/raw/Sample.data.archive.yaml#data
-      - name: my cut sample 20
-        section: ../upload/raw/Sample.data.archive.yaml#data
+    # outputs: 
+    #   - name: my cut sample 1
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 2
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 3
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 4
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 5
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 6
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 7
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 8
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 9
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 10
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 11
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 12
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 13
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 14
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 15
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 16
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 17
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 18
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 19
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
+    #   - name: my cut sample 20
+    #     section: ../upload/raw/Sample.data.archive.yaml#data
   - m_def: ../upload/raw/test_workflow.schema.archive.yaml#Further_sample_treatment
     name: Further_sample_treatment
     tasks:
