MOVPE IKZ Substrate class and xlsx file

--- a/directional_solidification_IKZ/data_revision/directional_solidification_datarevision.yaml
+++ b/directional_solidification_IKZ/data_revision/directional_solidification_datarevision.yaml
@@ -241,7 +241,7 @@ instrument:
   
 
 
-Charge: # -> Einwaage
+Charge: # -> same of Einwaage
   Charge preparation date:
   Charge mass:
   Feedstock size 1:
