Added User Notebook and Test Data
Added a ipython notebook for reading corresponding test data

--- a/PVD/PLD/jeremy_ikz/ikz_pld_plugin/nomad.yaml
+++ b/PVD/PLD/jeremy_ikz/ikz_pld_plugin/nomad.yaml
@@ -3,7 +3,11 @@ normalize:
     include:
     - MetainfoNormalizer
 plugins:
-  include: schemas/example
+  include:
+    - 'schemas/material_processing'
+    - 'schemas/ikz_pld'
   options:
-    schemas/example:
+    schemas/material_processing:
+      python_package: nomad_material_processing
+    schemas/ikz_pld:
       python_package: ikz_pld
