--- a/RTG_SIMS/nomadschemartgsims/nomad_plugin.yaml
+++ b/RTG_SIMS/nomadschemartgsims/nomad_plugin.yaml
@@ -1,4 +1,7 @@
-plugin_type: schema
-name: NOMAD's RTG SIMS schema plugin
+plugin_type: parser #schema
+name: NOMAD RTG SIMS schema and parser plugin
 description: |
-  This is a schema for SIMS depth profile data from RTG Microanalyse (https://www.rtg-berlin.de/)
+  This is a schema and parser for SIMS depth profile data from RTG Microanalyse (https://www.rtg-berlin.de/)
+mainfile_name_re: ^.*\.dp_ascii$ # added
+parser_class_name: nomadschemartgsims.SIMSParser # added
+code_name: RTG SIMS Parser # added
