--- a/LayTec_EpiTT/laytec_epitt_plugin/pyproject.toml
+++ b/LayTec_EpiTT/laytec_epitt_plugin/pyproject.toml
@@ -3,7 +3,7 @@ requires = [ "setuptools>=61.0.0",]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "lay_tec_epi_tt_schema"
+name = "laytec_epitt"
 version = "0.0.1"
 description = "A plugin for NOMAD"
 readme = "README.md"
