53 add substrate support to ikz pld plugin (#68)
* Added Categories to PVD User Schema Plugins

* Added ELN Components to PVD Base Section Properties

* Added Category and Formatted Angle

* Added ProcessStep

* Added Substrate Creation and Labels

* Overloaded ThermalEvaporationSteps

* Linting

* Added HZB PVD Thermal Parser

* Fixed Parser Regex for HZB Parser

* Changed Ensemble to CompositeSystem

* Added nomad-material-processing Requirement

* Added Sample Creation from Substrate

--- a/PVD/PLD/jeremy_ikz/ikz_pld_plugin/pyproject.toml
+++ b/PVD/PLD/jeremy_ikz/ikz_pld_plugin/pyproject.toml
@@ -9,7 +9,7 @@ description = "A NOMAD plugin for pulsed laser deposition at IKZ"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.9",]
-dependencies = [ "nomad-lab>=1.2.0-pre", "pytest", "typing-extensions==4.4.0",]
+dependencies = [ "nomad-lab>=1.2.1-pre", "pytest", "typing-extensions==4.4.0", "nomad-material-processing>=0.0.1"]
 
 [project.license]
 file = "LICENSE"
