--- a/IMEM-CNR_plugin/src/movpe_IMEM/nomad_plugin.yaml
+++ b/IMEM-CNR_plugin/src/movpe_IMEM/nomad_plugin.yaml
@@ -2,7 +2,13 @@ plugin_type: parser
 name: NOMAD movpe IMEM-CNR schema and parser plugin
 description: |
   This is a schema and parser for movpe IMEM-CNR
-# mainfile_name_re: ^.+\.growth.movpe.ikz.xlsx$
-mainfile_mime_re: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'
+mainfile_name_re: ^.+\.xlsx$
+mainfile_mime_re: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+mainfile_contents_dict:
+  {
+    "Overview": { "__has_all_keys": ["Sample", "Substrate T", "VI III Ratio"] },
+    "Substrate": { "__has_all_keys": ["Substrates", "Orientation"] },
+    "GrowthRun": { "__has_all_keys": ["Name", "Flow Metal Carrier", "Flow Oxydant Carrier"] },
+  }
 parser_class_name: movpe_IMEM.MovpeParserIMEM
 code_name: movpe IMEM-CNR Parser
