added xrf, cond, pl, uvvis (t/r) and parsing

--- a/PVD/thermal_evaporation/hzb_unold_lab_pvdp/hzb_unold_lab_plugin/src/hzb_unold_lab/nomad_plugin.yaml
+++ b/PVD/thermal_evaporation/hzb_unold_lab_pvdp/hzb_unold_lab_plugin/src/hzb_unold_lab/nomad_plugin.yaml
@@ -1,6 +1,8 @@
 description: This is a plugin schema generated from a yaml schema.
 name: parsers/hzb_unold_lab
 plugin_type: parser
-mainfile_name_re: ^.*hzb-unold-lab_pvdp.*\.(t|c)sv$
+mainfile_name_re: ^.*(spx.(xlsx|csv)|cond.csv|(reflection|transmission)_spec.csv|pvdp.*\.(t|c)sv)$
+mainfile_mime_re: '(application|text)/.*'
 parser_class_name: hzb_unold_lab.PVDPParser
 code_name: HZB Unold Lab Parser
+
