multiple mimetype support in hall plugin

--- a/hall/Lakeshore_plugin/lakeshore/measurement_parser/nomad_plugin.yaml
+++ b/hall/Lakeshore_plugin/lakeshore/measurement_parser/nomad_plugin.yaml
@@ -3,7 +3,7 @@ name: NOMAD Lakeshore Hall measurements plugin
 description: |
   This is a schema and parser for Lakeshore Hall measurements
 mainfile_name_re: ^.+\.txt$
-#mainfile_mime_re: 'text/plain'
+mainfile_mime_re:  (?:text/plain|application/x-wine-extension-ini)
 mainfile_contents_re: (?s)\[Sample parameters\].*?\[Measurements\]
 parser_class_name: lakeshore.measurement_parser.HallMeasurementsParser
 code_name: Lakeshore measurements Parser
