--- a/PPMS_QuantumDesign_plugin/PPMS/nomad_plugin.yaml
+++ b/PPMS_QuantumDesign_plugin/PPMS/nomad_plugin.yaml
@@ -3,6 +3,6 @@ name: NOMAD PPMS schema and parser plugin
 description: |
   This is a schema and parser for PPMS measurements
 mainfile_name_re: ^.+\.dat$ # added
-mainfile_mime_re: 'application/x-wine-extension-ini'
+mainfile_mime_re: 'text/plain'
 parser_class_name: PPMS.PPMSParser # added
 code_name: PPMS Parser
