--- a/analysis_plugin/src/analysis/nomad_plugin.yaml
+++ b/analysis_plugin/src/analysis/nomad_plugin.yaml
@@ -1,5 +1,5 @@
-plugin_type: parser
-name: Analysis Plugin
+plugin_type: schema
+name: schemas/analysis
 description: Analyses parsed data files |
   This plugin is used to analyze parsed data files. It creates a Jupyter notebook
   and links the data files to it. The notebook can be used to analyze the data.
