--- a/analysis_plugin/nomad.yaml
+++ b/analysis_plugin/nomad.yaml
@@ -4,7 +4,7 @@ normalize:
       - MetainfoNormalizer
 plugins:
   include:
-    - 'parsers/analysis'
+    - 'schemas/analysis'
   options:
-    parsers/analysis:
+    schemas/analysis:
       python_package: analysis
