--- a/LayTec_EpiTT/laytec_epitt_plugin/src/laytec_epitt/nomad_plugin.yaml
+++ b/LayTec_EpiTT/laytec_epitt_plugin/src/laytec_epitt/nomad_plugin.yaml
@@ -1,6 +1,7 @@
 description: This is a plugin schema and parser for LayTec EpiTT Measurements and exported *.dat files.
 name: LayTec EpiTT schema and parser plugin
-plugin_type: parser #schema
-mainfile_name_re: ^.*\.dat$ # added
-parser_class_name: laytec_epitt.EpiTTParser # added lay_tec_epi_tt_schema
-code_name: EpiTT Parser # added
+plugin_type: parser # schema
+mainfile_name_re: ^.*\.dat$
+mainfile_contents_re: 'FILETYPE = EpiNet DatArchiver File'
+parser_class_name: laytec_epitt.EpiTTParser
+code_name: EpiTT Parser
