updated Lakeshore Hall plugin

--- a/Lakeshore_plugin/src/hall/instrument_parser/nomad_plugin.yaml
+++ b/Lakeshore_plugin/src/hall/instrument_parser/nomad_plugin.yaml
@@ -5,5 +5,5 @@ description: |
 mainfile_name_re: ^.+\.txt$
 mainfile_mime_re: 'application/x-wine-extension-ini' #'text/plain'
 mainfile_contents_re: (?s)\[SystemParameters\].*?\[Measurement State Machine\]
-parser_class_name: lakeshore.instrument_parser.HallInstrumentParser
+parser_class_name: hall.instrument_parser.HallInstrumentParser
 code_name: Lakeshore instrument Parser
