--- a/Lakeshore_plugin/src/hall/measurement_parser/nomad_plugin.yaml
+++ b/Lakeshore_plugin/src/hall/measurement_parser/nomad_plugin.yaml
@@ -5,5 +5,5 @@ description: |
 mainfile_name_re: ^.+\.txt$
 mainfile_mime_re:  (?:text/plain|application/x-wine-extension-ini)
 mainfile_contents_re: (?s)\[Sample parameters\].*?\[Measurements\]
-parser_class_name: lakeshore.measurement_parser.HallMeasurementsParser
+parser_class_name: hall.measurement_parser.HallMeasurementsParser
 code_name: Lakeshore measurements Parser
