modified MANIFEST.in files

--- a/IMEM-CNR_plugin/MANIFEST.in
+++ b/IMEM-CNR_plugin/MANIFEST.in
@@ -1,5 +1,1 @@
-recursive-include src/basesections_IKZ nomad_plugin.yaml
-recursive-include src/movpe_IKZ nomad_plugin.yaml
-recursive-include src/cz_IKZ nomad_plugin.yaml
-recursive-include src/mbe_IKZ nomad_plugin.yaml
-recursive-include src/ds_IKZ nomad_plugin.yaml
+recursive-include src/movpe_IMEM nomad_plugin.yaml
