ruff autoformatting settings in .vscode folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,4 +26,7 @@
       "${workspaceFolder}/.pyenv/**": true,
     },
     "python.linting.enabled": true,
+    "python.testing.unittestEnabled": false,
+    "editor.defaultFormatter": "charliermarsh.ruff",
+    "editor.formatOnSave": true,
 }
