--- a/HZB_Unold_Lab_plugin/pyproject.toml
+++ b/HZB_Unold_Lab_plugin/pyproject.toml
@@ -4,16 +4,25 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "hzb-unold-lab"
-version = "0.0.1"
+version = "0.0.2"
 description = "A plugin for NOMAD"
 readme = "README.md"
 requires-python = ">=3.9"
-classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.9",]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "License :: OSI Approved :: Apache Software License",
+]
 dependencies = [
-    "nomad-lab>=1.2.0-pre",
+    "nomad-lab>=1.2.1",
+    "nomad-material-processing>=0.0.7",
+    "nomad-hzb-baseclasses>=0.0.1",
+]
+[project.optional-dependencies]
+dev = [
     "pytest",
-    "typing-extensions==4.4.0",
-    "nomad-material-processing>=0.0.1",
+    "structlog>=22.3.0",
 ]
 
 [project.license]
