--- a/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
+++ b/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
@@ -9,10 +9,18 @@ description = "A plugin for NOMAD"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.9",]
-dependencies = [ "nomad-lab>=1.2.0-pre", "pytest", "typing-extensions==4.4.0",]
+dependencies = [ "nomad-lab>=1.2.2dev399", "pytest", "typing-extensions==4.4.0",]
 
 [project.license]
 file = "LICENSE"
 
 [tool.setuptools.packages.find]
 where = [ "src",]
+
+[project.optional-dependencies]
+dev = [
+    "ruff>=0.2.0",
+    "pytest",
+    "structlog==22.3.0",
+    "python-logstash",
+]
