--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,4 +29,7 @@
     "python.testing.unittestEnabled": false,
     "editor.defaultFormatter": "charliermarsh.ruff",
     "editor.formatOnSave": true,
+    "[python]": {
+        "editor.defaultFormatter": "charliermarsh.ruff"
+    },
 }
