Transmission plugin: update the auxiliary files

--- a/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/nomad.yaml
+++ b/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/nomad.yaml
@@ -3,7 +3,8 @@ normalize:
     include:
     - MetainfoNormalizer
 plugins:
-  include: schemas/example
+  include:
+    - schemas/example
   options:
     schemas/example:
       python_package: uv_vis_nir_transmission
