--- a/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
+++ b/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
@@ -1,32 +1,36 @@
 [build-system]
-requires = [ "setuptools>=61.0.0",]
+requires = [
+    "setuptools>=61.0.0",
+    "setuptools-scm>=8.0",
+]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "uv_vis_nir_transmission"
-version = "0.0.1"
-description = "A plugin for NOMAD"
+dynamic = ["version"]
+description = "A plugin for NOMAD containing base sections for uv-vis transmission."
 readme = "README.md"
 requires-python = ">=3.9"
-classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.9",]
-dependencies = [ "nomad-lab>=1.2.2dev399", "pytest", "typing-extensions==4.4.0",]
-
-[project.license]
-file = "LICENSE"
-
-[tool.setuptools.packages.find]
-where = [ "src",]
-
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "License :: OSI Approved :: Apache Software License",
+]
+dependencies = [
+    "nomad-lab>=1.2.2dev578",
+]
 [project.optional-dependencies]
 dev = [
     "ruff>=0.2.0",
     "pytest",
-    "structlog==22.3.0",
-    "python-logstash",
 ]
 
+[project.license]
+file = "LICENSE"
+
 [tool.ruff]
-include = ["src/nomad_analysis/*.py", "tests/*.py"]
+include = ["src/uv_vis_nir_transmission/*.py", "tests/*.py"]
 lint.select = [
     "E", # pycodestyle
     "W", # pycodestyle
@@ -69,3 +73,9 @@ skip-magic-trailing-comma = false
 
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+nomad_analysis = ['*/nomad_plugin.yaml']
