--- a/Lakeshore_plugin/pyproject.toml
+++ b/Lakeshore_plugin/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "lakeshore_hall"
+name = "lakeshore_plugin"
 version = "0.0.1"
 description = "A plugin for NOMAD containing Lakeshore hall measurements."
 readme = "README.md"
