--- a/IKZ_plugin/pyproject.toml
+++ b/IKZ_plugin/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: MIT License",
 ]
-name = "ikz-plugin"
+name = "ikz_plugin"
 version = "0.0.1"
 description = "A plugin for NOMAD containing IKZ use cases."
 readme = "README.md"
@@ -29,9 +29,14 @@ authors = [
 ]
 license = { file = "LICENSE" }
 dependencies = [
-    "nomad-lab>=1.2.1",
-    "nomad-material-processing",
+    'nomad-lab>=1.2.1',
+    'nomad-material-processing',
+    'nomad-measurements',
+    'nomad-analysis',
+    'statsmodels',
+    'lakeshore_plugin@git+https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas.git@main#subdirectory=Lakeshore_plugin',
 ]
+
 [project.optional-dependencies]
 dev = ["ruff", "pytest", "structlog"]
 
@@ -115,6 +120,6 @@ where = ["src"]
 
 [project.entry-points.'nomad.plugin']
 
-ikz_plugin = "ikz_plugin:ikz_plugin"
+general = "ikz_plugin.general:general"
 
 
